--- a/templates/top20_email.html
+++ b/templates/top20_email.html
@@ -47,34 +47,20 @@
               <div style="text-align: left;">
 
 
-“
-
-there are some startups awaiting your rating. Please, make sure to rate all startups until August 29th.
-
-You can access your jury profile here “link to the website”
-
-Best regards,
-Global Inclusion Online Forum
-Startup Pitch Contest team”
 
 
-
-
-
-
-
-
-                    <span style="font-family: Verdana, sans-serif; font-size: 16px; line-height: 24px; font-weight: normal; color: #4F5A68; text-align: left;">Dear Name,</span>
+                    <span style="font-family: Verdana, sans-serif; font-size: 16px; line-height: 24px; font-weight: normal; color: #4F5A68; text-align: left;">Hi [Startup Name],</span>
   <div style="height: 30px; line-height: 30px; font-size: 30px">&nbsp;</div>
-                  <span style="font-family: Verdana, sans-serif; font-size: 16px; line-height: 24px; font-weight: normal; color: #4F5A68; text-align: left;">there are some startups awaiting your rating. Please, make sure to rate all startups until August 29th.
+                  <span style="font-family: Verdana, sans-serif; font-size: 16px; line-height: 24px; font-weight: normal; color: #4F5A68; text-align: left;">Unfortunately, you were not qualified for the final of the Global Inclusion Online Forum Startup Pitch Contests.<br>
+However, there are still great news. You were selected to participate in our virtual expo along with other best startups in your category.
 </span>
                        <div style="height: 30px; line-height: 30px; font-size: 30px">&nbsp;</div>
                   <span style="font-family: Verdana, sans-serif; font-size: 16px; line-height: 24px; font-weight: normal; color: #4F5A68; text-align: left;">
-                      Our team representative will contact you with further details.
+                 Our team representative will contact you with further details.
+
                   </span>
                         <div style="height: 30px; line-height: 30px; font-size: 30px">&nbsp;</div>
-                  <span style="font-family: Verdana, sans-serif; font-size: 16px; line-height: 24px; font-weight: normal; color: #4F5A68; text-align: left;">Celebrate, rest, and get ready for the pitch!</span>
-                  <div style="height: 30px; line-height: 30px; font-size: 30px">&nbsp;</div>
+
                   <span style="font-family: Verdana, sans-serif; font-size: 16px; line-height: 24px; font-weight: normal; color: #4F5A68; text-align: left;">Best regards,<br>
 Global Inclusion Online Forum team</span>
 
