--- a/templates/top8_email.html
+++ b/templates/top8_email.html
@@ -47,15 +47,6 @@
               <div style="text-align: left;">
 
 
-“
-
-there are some startups awaiting your rating. Please, make sure to rate all startups until August 29th.
-
-You can access your jury profile here “link to the website”
-
-Best regards,
-Global Inclusion Online Forum
-Startup Pitch Contest team”
 
 
 
@@ -64,9 +55,9 @@ Startup Pitch Contest team”
 
 
 
-                    <span style="font-family: Verdana, sans-serif; font-size: 16px; line-height: 24px; font-weight: normal; color: #4F5A68; text-align: left;">Dear Name,</span>
+                    <span style="font-family: Verdana, sans-serif; font-size: 16px; line-height: 24px; font-weight: normal; color: #4F5A68; text-align: left;">Hi [Startup Name],</span>
   <div style="height: 30px; line-height: 30px; font-size: 30px">&nbsp;</div>
-                  <span style="font-family: Verdana, sans-serif; font-size: 16px; line-height: 24px; font-weight: normal; color: #4F5A68; text-align: left;">there are some startups awaiting your rating. Please, make sure to rate all startups until August 29th.
+                  <span style="font-family: Verdana, sans-serif; font-size: 16px; line-height: 24px; font-weight: normal; color: #4F5A68; text-align: left;">Congratulations! You were qualified for the final of the Global Inclusion Online Forum Startup Pitch Contests in your category. Moreover, you are a part of our startup virtual expo.
 </span>
                        <div style="height: 30px; line-height: 30px; font-size: 30px">&nbsp;</div>
                   <span style="font-family: Verdana, sans-serif; font-size: 16px; line-height: 24px; font-weight: normal; color: #4F5A68; text-align: left;">
