--- a/templates/not_in_final_email.html
+++ b/templates/not_in_final_email.html
@@ -47,33 +47,16 @@
               <div style="text-align: left;">
 
 
-“
 
-there are some startups awaiting your rating. Please, make sure to rate all startups until August 29th.
-
-You can access your jury profile here “link to the website”
-
-Best regards,
-Global Inclusion Online Forum
-Startup Pitch Contest team”
-
-
-
-
-
-
-
-
-                    <span style="font-family: Verdana, sans-serif; font-size: 16px; line-height: 24px; font-weight: normal; color: #4F5A68; text-align: left;">Dear Name,</span>
+                    <span style="font-family: Verdana, sans-serif; font-size: 16px; line-height: 24px; font-weight: normal; color: #4F5A68; text-align: left;">Hi [Startup Name],</span>
   <div style="height: 30px; line-height: 30px; font-size: 30px">&nbsp;</div>
-                  <span style="font-family: Verdana, sans-serif; font-size: 16px; line-height: 24px; font-weight: normal; color: #4F5A68; text-align: left;">there are some startups awaiting your rating. Please, make sure to rate all startups until August 29th.
-</span>
+                  <span style="font-family: Verdana, sans-serif; font-size: 16px; line-height: 24px; font-weight: normal; color: #4F5A68; text-align: left;">Unfortunately, you were not qualified for the final of the Global Inclusion Online Forum Startup Pitch Contests in your category.</span>
                        <div style="height: 30px; line-height: 30px; font-size: 30px">&nbsp;</div>
                   <span style="font-family: Verdana, sans-serif; font-size: 16px; line-height: 24px; font-weight: normal; color: #4F5A68; text-align: left;">
-                      Our team representative will contact you with further details.
+                      Thank you for participating in the GIOF Startup Pitch Contests. Don’t miss a chance to join our panel days on September 3-4 and other events of the Forum.
                   </span>
                         <div style="height: 30px; line-height: 30px; font-size: 30px">&nbsp;</div>
-                  <span style="font-family: Verdana, sans-serif; font-size: 16px; line-height: 24px; font-weight: normal; color: #4F5A68; text-align: left;">Celebrate, rest, and get ready for the pitch!</span>
+                  <span style="font-family: Verdana, sans-serif; font-size: 16px; line-height: 24px; font-weight: normal; color: #4F5A68; text-align: left;">Please, do not hesitate to contact us with any questions via <a href="mailto:pitch@inclusionforum.global">pitch@inclusionforum.global</a> </span>
                   <div style="height: 30px; line-height: 30px; font-size: 30px">&nbsp;</div>
                   <span style="font-family: Verdana, sans-serif; font-size: 16px; line-height: 24px; font-weight: normal; color: #4F5A68; text-align: left;">Best regards,<br>
 Global Inclusion Online Forum team</span>
