email_templates fix

--- a/templates/invite_email.html
+++ b/templates/invite_email.html
@@ -47,36 +47,29 @@
               <div style="text-align: left;">
 
 
-“
-
-there are some startups awaiting your rating. Please, make sure to rate all startups until August 29th.
-
-You can access your jury profile here “link to the website”
-
-Best regards,
-Global Inclusion Online Forum
-Startup Pitch Contest team”
 
 
 
 
 
-
-
-
-                    <span style="font-family: Verdana, sans-serif; font-size: 16px; line-height: 24px; font-weight: normal; color: #4F5A68; text-align: left;">Dear Name,</span>
+                    <span style="font-family: Verdana, sans-serif; font-size: 16px; line-height: 24px; font-weight: normal; color: #4F5A68; text-align: left;">Dear {{ name }}</span>
   <div style="height: 30px; line-height: 30px; font-size: 30px">&nbsp;</div>
-                  <span style="font-family: Verdana, sans-serif; font-size: 16px; line-height: 24px; font-weight: normal; color: #4F5A68; text-align: left;">there are some startups awaiting your rating. Please, make sure to rate all startups until August 29th.
-</span>
+                  <span style="font-family: Verdana, sans-serif; font-size: 16px; line-height: 24px; font-weight: normal; color: #4F5A68; text-align: left;">Thank you for joining the Startup Pitch Contest as a jury member.</span>
                        <div style="height: 30px; line-height: 30px; font-size: 30px">&nbsp;</div>
                   <span style="font-family: Verdana, sans-serif; font-size: 16px; line-height: 24px; font-weight: normal; color: #4F5A68; text-align: left;">
-                      Our team representative will contact you with further details.
+                      Please find your login information for the Startup Evaluation Platform below.
+                  </span>
+                            <div style="height: 30px; line-height: 30px; font-size: 30px">&nbsp;</div>
+                  <span style="font-family: Verdana, sans-serif; font-size: 16px; line-height: 24px; font-weight: normal; color: #4F5A68; text-align: left;">
+                      Login:{{ login }}<br>
+Password:{{ password }}
                   </span>
                         <div style="height: 30px; line-height: 30px; font-size: 30px">&nbsp;</div>
-                  <span style="font-family: Verdana, sans-serif; font-size: 16px; line-height: 24px; font-weight: normal; color: #4F5A68; text-align: left;">Celebrate, rest, and get ready for the pitch!</span>
+                  <span style="font-family: Verdana, sans-serif; font-size: 16px; line-height: 24px; font-weight: normal; color: #4F5A68; text-align: left;">You can access your startup evaluation platform account through the following <a href="https://startup.inclusionforum.global/">link</a>.
+
                   <div style="height: 30px; line-height: 30px; font-size: 30px">&nbsp;</div>
                   <span style="font-family: Verdana, sans-serif; font-size: 16px; line-height: 24px; font-weight: normal; color: #4F5A68; text-align: left;">Best regards,<br>
-Global Inclusion Online Forum team</span>
+GIOF Startup Pitch Contest team</span>
 
 
 
