--- a/templates/not_rate_email.html
+++ b/templates/not_rate_email.html
@@ -45,13 +45,13 @@
             <img src="https://reddevil113.github.io/portfolio/Inclusion/main-img.jpg" alt="" style="display: block; width: 100%;">
             <div style="height: 30px; line-height: 30px; font-size: 30px">&nbsp;</div>
             <div style="text-align: left;">
-                <span style="font-family: Verdana, sans-serif; font-size: 16px; line-height: 24px; font-weight: normal; color: #4F5A68; text-align: left;">Dear Name,</span>
+                <span style="font-family: Verdana, sans-serif; font-size: 16px; line-height: 24px; font-weight: normal; color: #4F5A68; text-align: left;">Dear {{ name }},</span>
                 <div style="height: 30px; line-height: 30px; font-size: 30px">&nbsp;</div>
                 <span style="font-family: Verdana, sans-serif; font-size: 16px; line-height: 24px; font-weight: normal; color: #4F5A68; text-align: left;">there are some startups awaiting your rating. Please, make sure to rate all startups until August 29th.
 </span>
                 <div style="height: 30px; line-height: 30px; font-size: 30px">&nbsp;</div>
                 <span style="font-family: Verdana, sans-serif; font-size: 16px; line-height: 24px; font-weight: normal; color: #4F5A68; text-align: left;">
-                      You can access your jury profile <a href="">here</a>
+                      You can access your jury profile <a href="https://startup.inclusionforum.global/">here</a>
                   </span>
                 <div style="height: 30px; line-height: 30px; font-size: 30px">&nbsp;</div>
 
