--- a/templates/top20_email.html
+++ b/templates/top20_email.html
@@ -49,7 +49,7 @@
 
 
 
-                    <span style="font-family: Verdana, sans-serif; font-size: 16px; line-height: 24px; font-weight: normal; color: #4F5A68; text-align: left;">Hi [Startup Name],</span>
+                    <span style="font-family: Verdana, sans-serif; font-size: 16px; line-height: 24px; font-weight: normal; color: #4F5A68; text-align: left;">Hi {{ name }},</span>
   <div style="height: 30px; line-height: 30px; font-size: 30px">&nbsp;</div>
                   <span style="font-family: Verdana, sans-serif; font-size: 16px; line-height: 24px; font-weight: normal; color: #4F5A68; text-align: left;">Unfortunately, you were not qualified for the final of the Global Inclusion Online Forum Startup Pitch Contests.<br>
 However, there are still great news. You were selected to participate in our virtual expo along with other best startups in your category.
