--- a/templates/top8_email.html
+++ b/templates/top8_email.html
@@ -55,7 +55,7 @@
 
 
 
-                    <span style="font-family: Verdana, sans-serif; font-size: 16px; line-height: 24px; font-weight: normal; color: #4F5A68; text-align: left;">Hi [Startup Name],</span>
+                    <span style="font-family: Verdana, sans-serif; font-size: 16px; line-height: 24px; font-weight: normal; color: #4F5A68; text-align: left;">Hi {{ name }},</span>
   <div style="height: 30px; line-height: 30px; font-size: 30px">&nbsp;</div>
                   <span style="font-family: Verdana, sans-serif; font-size: 16px; line-height: 24px; font-weight: normal; color: #4F5A68; text-align: left;">Congratulations! You were qualified for the final of the Global Inclusion Online Forum Startup Pitch Contests in your category. Moreover, you are a part of our startup virtual expo.
 </span>
