--- a/templates/invite_email.html
+++ b/templates/invite_email.html
@@ -61,7 +61,7 @@
                   </span>
                             <div style="height: 30px; line-height: 30px; font-size: 30px">&nbsp;</div>
                   <span style="font-family: Verdana, sans-serif; font-size: 16px; line-height: 24px; font-weight: normal; color: #4F5A68; text-align: left;">
-                      Login:{{ login }}<br>
+                      Login:{{ email }}<br>
 Password:{{ password }}
                   </span>
                         <div style="height: 30px; line-height: 30px; font-size: 30px">&nbsp;</div>
