--- a/templates/admin.html
+++ b/templates/admin.html
@@ -28,32 +28,10 @@
 			</div>
 			<div class="header-menu">
 				<ul class="header-list">
-					<li class="drop">
-						<a href="#" class="drop-text">
+					<li onclick="window.location.href = '/'" class="drop">
+						<a href="/" class="drop-text">
 							Rate
-							<svg width="9" height="5" viewBox="0 0 9 5" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M7.3625 0.368747L4.5 3.23125L1.63125 0.368747L0.75 1.25L4.5 5L8.25 1.25L7.3625 0.368747Z" fill="white"/></svg>
 						</a>
-						<div class="drop-info">
-							  <ul>
-                                {% if 2 in cat_ids %}
-                                    <li ><a class="active" href="{% url 'startups' 2 %}">Inclusion Solutions</a></li>
-                                {% else %}
-                                    <li><a >Inclusion Solutions</a></li>
-                                {% endif %}
-                                {% if 1 in cat_ids %}
-                                    <li><a class="active" href="{% url 'startups' 1 %}">Financial Services</a></li>
-                                {% else %}
-                                    <li><a >Financial Services</a></li>
-                                {% endif %}
-                                {% if 3 in cat_ids %}
-                                    <li><a class="active" href="{% url 'startups' 3 %}">HR Solutions</a></li>
-                                {% else %}
-                                    <li><a >HR Solutions</a></li>
-                                {% endif %}
-
-
-                            </ul>
-						</div>
 					</li>
 					<li><a href="{% url 'instructions' %}">Instructions</a></li>
 					<li><a href="{% url 'contests' %}">Contests</a></li>
@@ -97,11 +75,7 @@
 						</ul>
 					</div>
 					<div class="filters-row">
-						<ul class="filters-list">
-							<li><a href="{% url 'admin_page' 2 %}" class="{% if category_id == '2' %}active{% endif %}">Inclusion Solutions</a></li>
-							<li><a href="{% url 'admin_page' 1 %}" class="{% if category_id == '1' %}active{% endif %}">Financial Services</a></li>
-							<li><a href="{% url 'admin_page' 3 %}" class="{% if category_id == '3' %}active{% endif %}">HR Solutions</a></li>
-						</ul>
+
 					</div>
 				</div>
 			</div>
@@ -110,17 +84,7 @@
 					<div class="admin-top">
 						<div class="admin-top__row">
 							<span class="admin-title">List of Jury</span>
-                            {% if stage.stage1 %}
-							<a style="background: red" href="{% url 'start_stage2' %}" class="primary-btn primary-btn__ico" onclick="return confirm('Are you SURE?')">
-								<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12ZM12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4Z" fill="white"/><path fill-rule="evenodd" clip-rule="evenodd" d="M13 7C13 6.44772 12.5523 6 12 6C11.4477 6 11 6.44772 11 7V11H7C6.44772 11 6 11.4477 6 12C6 12.5523 6.44772 13 7 13H11V17C11 17.5523 11.4477 18 12 18C12.5523 18 13 17.5523 13 17V13H17C17.5523 13 18 12.5523 18 12C18 11.4477 17.5523 11 17 11H13V7Z" fill="white"/></svg>
-								START STAGE 2
-							</a>
-                            {% else %}
-                              <a style="color: red"  >
-								<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12ZM12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4Z" fill="white"/><path fill-rule="evenodd" clip-rule="evenodd" d="M13 7C13 6.44772 12.5523 6 12 6C11.4477 6 11 6.44772 11 7V11H7C6.44772 11 6 11.4477 6 12C6 12.5523 6.44772 13 7 13H11V17C11 17.5523 11.4477 18 12 18C12.5523 18 13 17.5523 13 17V13H17C17.5523 13 18 12.5523 18 12C18 11.4477 17.5523 11 17 11H13V7Z" fill="white"/></svg>
-								STAGE 2 STARTED
-							</a>
-                            {% endif %}
+
                             <a href="{% url 'invite' %}" class="primary-btn primary-btn__ico">
 								<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12ZM12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4Z" fill="white"/><path fill-rule="evenodd" clip-rule="evenodd" d="M13 7C13 6.44772 12.5523 6 12 6C11.4477 6 11 6.44772 11 7V11H7C6.44772 11 6 11.4477 6 12C6 12.5523 6.44772 13 7 13H11V17C11 17.5523 11.4477 18 12 18C12.5523 18 13 17.5523 13 17V13H17C17.5523 13 18 12.5523 18 12C18 11.4477 17.5523 11 17 11H13V7Z" fill="white"/></svg>
 								Invite Jury
@@ -185,18 +149,8 @@
 					<div class="admin-top">
 						<div class="admin-top__row">
 							<span class="admin-title">List of startUP’s</span>
-                            {% if stage.stage1 %}
-							<a style="background: red" href="{% url 'start_stage2' %}" class="primary-btn primary-btn__ico" onclick="return confirm('Are you SURE?')">
-								<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12ZM12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4Z" fill="white"/><path fill-rule="evenodd" clip-rule="evenodd" d="M13 7C13 6.44772 12.5523 6 12 6C11.4477 6 11 6.44772 11 7V11H7C6.44772 11 6 11.4477 6 12C6 12.5523 6.44772 13 7 13H11V17C11 17.5523 11.4477 18 12 18C12.5523 18 13 17.5523 13 17V13H17C17.5523 13 18 12.5523 18 12C18 11.4477 17.5523 11 17 11H13V7Z" fill="white"/></svg>
-								START STAGE 2
-							</a>
-                            {% else %}
-                              <a style="color: red"  >
-								<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12ZM12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4Z" fill="white"/><path fill-rule="evenodd" clip-rule="evenodd" d="M13 7C13 6.44772 12.5523 6 12 6C11.4477 6 11 6.44772 11 7V11H7C6.44772 11 6 11.4477 6 12C6 12.5523 6.44772 13 7 13H11V17C11 17.5523 11.4477 18 12 18C12.5523 18 13 17.5523 13 17V13H17C17.5523 13 18 12.5523 18 12C18 11.4477 17.5523 11 17 11H13V7Z" fill="white"/></svg>
-								STAGE 2 STARTED
-							</a>
-                            {% endif %}
-							<a href="#" class="primary-btn primary-btn__ico">
+
+							<a href="/results" class="primary-btn primary-btn__ico">
 								<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M11 5C11 4.44772 11.4477 4 12 4C12.5523 4 13 4.44772 13 5V12.1578L16.2428 8.91501L17.657 10.3292L12.0001 15.9861L6.34326 10.3292L7.75748 8.91501L11 12.1575V5Z" fill="white"/><path d="M4 14H6V18H18V14H20V18C20 19.1046 19.1046 20 18 20H6C4.89543 20 4 19.1046 4 18V14Z" fill="white"/></svg>
 								Download List
 							</a>
@@ -297,16 +251,9 @@
                                         {% if startup.presentation %}
 										<p><a href="{{ startup.presentation }}">MyPresentation.pdf</a></p>
                                         {% endif %}
-										<div class="startup-slider">
-											<div class="startup-slide">
-												<div class="startup-video">
-													<div class="startup-iframe">
-														<iframe src="https://www.youtube.com/embed/Uoq8NA_N7Ao" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-													</div>
-												</div>
-											</div>
-
-										</div>
+										{% if startup.video %}
+                                        <a target="_blank" href="{{ startup.video }}">Video link</a>
+                                    {% endif %}
 									</div>
 								</div>
 							</div>
@@ -324,10 +271,8 @@
 													<div class="startup-details__li">Team</div>
 													<div class="startup-details__li startup-details__li-text">{{ startup.team_bar }} Points</div>
 												</div>
-												<div class="startup-details__row">
-													<div class="startup-details__li">Achievements</div>
-													<div class="startup-details__li startup-details__li-text">{{ startup.achievements_bar }} Points</div>
-												</div>
+
+
 												<div class="startup-details__row">
 													<div class="startup-details__li">Market Validation</div>
 													<div class="startup-details__li startup-details__li-text">{{ startup.market_bar }} Points</div>
@@ -336,16 +281,13 @@
 													<div class="startup-details__li">Business Model</div>
 													<div class="startup-details__li startup-details__li-text">{{ startup.business_bar }} Points</div>
 												</div>
-											</div>
-										</div>
-										<div class="startup-details__block">
-											<div class="startup-details__block-wrap">
-												<div class="startup-details__row">
+                                                <div class="startup-details__row">
 													<div class="startup-details__li">Presentation</div>
 													<div class="startup-details__li startup-details__li-text">{{ startup.presentation_bar }} Points</div>
 												</div>
 											</div>
 										</div>
+
 									</div>
 								</div>
 							</div>
