--- a/templates/contests.html
+++ b/templates/contests.html
@@ -73,17 +73,10 @@
 				<p>The Global Inclusion Online Forum Startup Pitch Contest is one of the first startup pitches that offers a platform to early stage startups that are dealing with inclusion issues. In addition to what our innovation partners are pledging to donate, CFC Big Ideas commits to putting US $6 from every paid ticket to the Forum into the prize fund.</p>
 			</div>
 			<div class="contests-block">
-				<h3 class="contests-subtitle">Inclusion Solutions</h3>
-				<p>For startups that have developed unique products and services that considers the full range of human diversity — ability, language, culture, gender, age and other forms of human difference</p>
+				<h3 class="contests-subtitle">Startup Pitching</h3>
+				<p>Applicants qualified for the final will get a chance to pitch their startups at one of the Startup Pitch Session on Friday, September 4th.</p>
 			</div>
-			<div class="contests-block">
-				<h3 class="contests-subtitle">Financial Services</h3>
-				<p>For startups that offer financial services or investment to entrepreneurs from underrepresented groups or minorities. The objective of such startups should follow such a rule: to include different categories of people into the economic and financial system by engaging them into new financial tools and facilities</p>
-			</div>
-			<div class="contests-block">
-				<h3 class="contests-subtitle">HR Solutions</h3>
-				<p>For startups that offer products, services or tools that have a positive impact on inclusive hiring, staffing, talent acquisition, applying for vacancies or ensuring an unbiased workplace experience</p>
-			</div>
+
 			<div class="contests-block">
 				<h3 class="contests-subtitle">Requirements:</h3>
 				<ul>
@@ -96,15 +89,15 @@
 				<div class="contests-row">
 					<div class="contests-col">
 						<span class="contests-num"><svg width="18" height="49" viewBox="0 0 18 49" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M17.99 0V49H11.06V6.09H0V0H17.99Z" fill="white"/></svg></span>
-						<p>Application and Recruitment Period: till 22 August 2020</p>
+						<p>Application and Recruitment Period: till 27 August 2020</p>
 					</div>
 					<div class="contests-col">
 						<span class="contests-num"><svg width="37" height="50" viewBox="0 0 37 50" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M36.82 43.47V49.56H1.61V44.8L21.56 25.55C23.9867 23.2167 25.62 21.21 26.46 19.53C27.3 17.8033 27.72 16.0767 27.72 14.35C27.72 11.7833 26.81 9.8 24.99 8.4C23.2167 6.95333 20.65 6.23 17.29 6.23C11.8767 6.23 7.7 8.00333 4.76 11.55L0 7.42C1.91333 5.08667 4.41 3.26667 7.49 1.96C10.6167 0.653333 14.0933 0 17.92 0C23.0533 0 27.1367 1.23667 30.17 3.71C33.2033 6.13666 34.72 9.45 34.72 13.65C34.72 16.2633 34.16 18.7367 33.04 21.07C31.92 23.4033 29.7967 26.0633 26.67 29.05L11.69 43.47H36.82Z" fill="white"/></svg></span>
-						<p>Finalists Selection: 23–25 August 2020</p>
+						<p>Finalists Selection: 28–29 August 2020</p>
 					</div>
 					<div class="contests-col">
 						<span class="contests-num"><svg width="37" height="50" viewBox="0 0 37 50" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M21.77 20.58C26.5767 21.0467 30.24 22.54 32.76 25.06C35.28 27.5333 36.54 30.7067 36.54 34.58C36.54 37.38 35.84 39.9233 34.44 42.21C33.04 44.45 30.94 46.2467 28.14 47.6C25.3867 48.9067 22.0033 49.56 17.99 49.56C14.49 49.56 11.13 49.0467 7.91 48.02C4.69 46.9467 2.05333 45.4767 0 43.61L3.22 38.08C4.9 39.6667 7.04667 40.95 9.66 41.93C12.2733 42.8633 15.05 43.33 17.99 43.33C21.63 43.33 24.4533 42.56 26.46 41.02C28.5133 39.48 29.54 37.3567 29.54 34.65C29.54 31.9433 28.5367 29.8433 26.53 28.35C24.5233 26.8567 21.49 26.11 17.43 26.11H13.51V21.21L25.83 6.09H2.24V0H34.58V4.76L21.77 20.58Z" fill="white"/></svg></span>
-						<p>Pitch Preparations’ Testing sessions: 26–31 August 2020</p>
+						<p>Pitch Preparations’ Testing sessions: 30–31 August 2020</p>
 					</div>
 					<div class="contests-col">
 						<span class="contests-num"><svg width="44" height="49" viewBox="0 0 44 49" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M43.33 36.96H34.02V49H27.23V36.96H0V32.06L25.06 0H32.62L8.61 30.94H27.44V20.3H34.02V30.94H43.33V36.96Z" fill="white"/></svg></span>
