--- a/templates/index.html
+++ b/templates/index.html
@@ -272,9 +272,9 @@
 									</form>
 								</div>
 								<div class="startup-rate__col startup-rate__col-2">
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum augue a, tristique maecenas et.</p>
-									<p>Hendrerit elementum imperdiet leo tellus volutpat consequat diam.</p>
-									<p>Tristique maecenas commodo non aenean et ullamcorper non. Praesent magna at lacus mauris nec malesuada semper a.</p>
+									<p>Please evaluate this startup based on the given criteria</p>
+									<p>Rating is based on the number of points, where:</p>
+									<p>1 (red) is the lowest rating<br>5 (green) is the highest rating</p>
 								</div>
 							</div>
 						</div>
